Fixed Overflow Issue On Demos Page

--- a/src/components/VirtualPlayground/VirtualPlayground.scss
+++ b/src/components/VirtualPlayground/VirtualPlayground.scss
@@ -1,8 +1,8 @@
 @import '../../styles/base';
 
 .virtualPlayground {
-  width: 100vw;
-  height: 100%;
+  width: 100%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
