--- a/src/pages/Demos/Demos.scss
+++ b/src/pages/Demos/Demos.scss
@@ -6,9 +6,14 @@
   background-color: black;
   display: flex;
   flex-direction: column;
+  @include tablet {
+    padding-top: 5rem; //0rem 1rem 0rem;
+  }
+  @include desktop {
+  }
   &__wrapper {
-    margin-top: 9vh;
-    height: 100%;
+    //margin-top: 9vh;
+    height: 45%;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -16,7 +21,6 @@
     justify-content: space-around;
     overflow: scroll;
     @include tablet {
-      margin-top: 5rem;
       padding-left: 10rem;
     }
     @include desktop {
